examples/test/testpolicy10943.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10943
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key23: value23
      key19: value0
      key1: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value21
          key34: value13
          key36: value35
      podSelector:
        matchLabels:
          key36: value5
